refactor: 할인 타입에 맞는 바우처 대신 할인 정책 생성