@@ -1,5 +1,6 @@
 package com.programmers.vouchermanagement.voucher.application;
 
+import com.programmers.vouchermanagement.voucher.domain.DiscountPolicy;
 import com.programmers.vouchermanagement.voucher.domain.DiscountType;
 import com.programmers.vouchermanagement.voucher.domain.Voucher;
 import com.programmers.vouchermanagement.voucher.domain.VoucherRepository;
@@ -8,7 +9,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -20,7 +20,8 @@ public class VoucherService {
     public Voucher createVoucher(VoucherDto request) {
         DiscountType discountType = request.discountType();
         int amount = request.amount();
-        Voucher voucher = discountType.createVoucher(amount);
+        DiscountPolicy discountPolicy = discountType.createDiscountPolicy(amount);
+        Voucher voucher = new Voucher(discountPolicy);
         log.info("Create Voucher! DiscountType: {}, DiscountAmount: {}", voucher.getClass().getSimpleName(), request.amount());
         return voucherRepository.save(voucher);
     }
@@ -29,6 +30,6 @@ public class VoucherService {
         List<Voucher> vouchers = voucherRepository.findAll();
         return vouchers.stream()
                 .map(VoucherDto::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
